lostCTRL/force-app/main/default/objects/CommentsProduct__c/CommentsProduct__c.object-meta.xml
<CustomObject>
    <label>Comment product</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>