lostCTRL/force-app/main/default/objects/CommentsProduct__c/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Approval status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
                <default>true</default>
                <label>Review</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>