lostCTRL/force-app/main/default/objects/CommentsProduct__c/fields/comment__c.field-meta.xml
<CustomField>
    <fullName>comment__c</fullName>
    <label>comment</label>
    <type>TextArea</type>
</CustomField>