lostCTRL/force-app/main/default/objects/CommentsProduct__c/fields/Star__c.field-meta.xml
<CustomField>
    <fullName>Star__c</fullName>
    <label>Star</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>